--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Single page web app using Angularjs</title>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-route.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <!--angular file start here-->
+  <script src="/lib/angular.min.js"></script>
+  <script src="/lib/angular-route.js"></script>
+  <script src="/lib/jquery.js"></script>
+  
+  
+  <!--bootstrap file start here-->
+  <link rel="stylesheet" href="/lib/bootstrap.css">
+  <link rel="stylesheet" href="/lib/bootstrap.js">
   <script src="js/app.js"></script>
 </head>
 <body ng-app="single-page-app">
