--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <title>Single page web app using Angularjs</title>
   <!--angular file start here-->
-  <script src="/lib/angular.min.js"></script>
-  <script src="/lib/angular-route.js"></script>
-  <script src="/lib/jquery.js"></script>
+  <script src="lib/angular.min.js"></script>
+  <script src="lib/angular-route.js"></script>
+  <script src="lib/jquery.js"></script>
   
   
   <!--bootstrap file start here-->
-  <link rel="stylesheet" href="/lib/bootstrap.css">
-  <link rel="stylesheet" href="/lib/bootstrap.js">
+  <link rel="stylesheet" href="lib/bootstrap.css">
+  <link rel="stylesheet" href="lib/bootstrap.js">
   <script src="js/app.js"></script>
 </head>
 <body ng-app="single-page-app">
