Bower update with angular version of 1.6 version

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
     <!-- endbuild -->
     </head>
     <body>
-		<div ng-app="sbAdminApp">
+		<div ng-app="imageCrmApp">
 			<div ui-view></div>
 		</div>
     </body>
