--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -1,5 +1,5 @@
-<div class="navbar-default sidebar" role="navigation">
-    <div class="sidebar-nav navbar-collapse">
+<div class="navbar-default sidebar " role="navigation">
+    <div class="sidebar-nav navbar-collapse left-m-bar">
         <ul class="nav in" id="side-menu">
             <sidebar-search></sidebar-search>
             <li ui-sref-active="active">
