changes in transaction page followed by side bar and common css.

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -87,6 +87,7 @@
                 <!-- /.nav-second-level -->
             </li>
             <li><a href="http://www.strapui.com/">Premium Angular Themes</a></li>
+             <li><a href="#!transaction">Transaction</a></li>
         </ul>
     </div>
     <!-- /.sidebar-collapse -->
