--- a/app/index.html
+++ b/app/index.html
@@ -36,13 +36,20 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <script src="bower_components/Chart.js/Chart.min.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>	
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
+        <script src="scripts/app.js"></script>        
+        <script src="js/sb-admin-2.js"></script> 
+        <script src="js/constants.js"></script>       
+        <script src="services/user.service.js"></script>
+        <script src="services/authentication.service.js"></script>
+        <script src="services/flash.service.js"></script>
+		<script src="services/base64Service.js"></script>
         <script src="scripts/controllers/loginController.js"></script>
-        <script src="js/sb-admin-2.js"></script>	
+        <!-- Real user service that uses an api -->
+        <!-- that uses local storage -->	
     <!-- endbuild -->
     </head>
     <body>
