--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -5,6 +5,7 @@
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
+            <li><a ui-sref="dashboard.transaction">Transaction</a></li>
             <li ui-sref-active="active">
 
                 <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
@@ -87,7 +88,6 @@
                 <!-- /.nav-second-level -->
             </li>
             <li><a href="http://www.strapui.com/">Premium Angular Themes</a></li>
-             <li><a href="#!transaction">Transaction</a></li>
         </ul>
     </div>
     <!-- /.sidebar-collapse -->
