--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="bower_components/metisMenu/dist/metisMenu.min.css">
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" type="text/css">
+	<link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.min.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -36,7 +37,8 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <script src="bower_components/Chart.js/Chart.min.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>	
+    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
+	<script src="bower_components/angular-ui-grid/ui-grid.min.js"></script>	
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
