abandond cart list screen creation with grouping of data feature

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -5,10 +5,9 @@
                 <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>        
             <li><a ui-sref="dashboard.transaction"><i class="fa fa-university fa-fw"></i>Transaction</a></li>
+			<li><a ui-sref="dashboard.abandondCartList"><i class="fa fa-table fa-fw"></i>Abandond Cart List</a></li>
             <li ui-sref-active="active">
-
                 <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
-
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.table"><i class="fa fa-table fa-fw"></i> Tables</a>
@@ -86,7 +85,6 @@
                 </ul>
                 <!-- /.nav-second-level -->
             </li>
-            <li><a href="http://www.strapui.com/">Premium Angular Themes</a></li>
         </ul>
     </div>
     <!-- /.sidebar-collapse -->
