--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -9,7 +9,7 @@
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
             </li>
-			<li><a ui-sref="dashboard.daily-tasks"><i class="fa fa-university fa-fw"></i>Daily Tasks</a></li>
+			<li  ui-sref-active="active"><a ui-sref="dashboard.daily-tasks"><i class="fa fa-university fa-fw"></i>Daily Tasks</a></li>
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.table"><i class="fa fa-table fa-fw"></i> Tables</a>
             </li>
