--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -6,6 +6,7 @@
             </li>        
             <li><a ui-sref="dashboard.transaction"><i class="fa fa-university fa-fw"></i>Transaction</a></li>
 			<li><a ui-sref="dashboard.abandondCartList"><i class="fa fa-table fa-fw"></i>Abandond Cart List</a></li>
+			<li><a ui-sref="dashboard.advancedMemberSearch"><i class="fa fa-table fa-fw"></i>Advance Member Search</a></li>			
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
             </li>
