search client information.

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -7,7 +7,8 @@
             </li>        
             <li><a ui-sref="dashboard.transaction"><i class="fa fa-university fa-fw"></i>Transaction</a></li>
 			<li><a ui-sref="dashboard.abandondCartList"><i class="fa fa-table fa-fw"></i>Abandond Cart List</a></li>
-			<li><a ui-sref="dashboard.advancedMemberSearch"><i class="fa fa-table fa-fw"></i>Advance Member Search</a></li>			
+			<li><a ui-sref="dashboard.advancedMemberSearch"><i class="fa fa-table fa-fw"></i>Advance Member Search</a></li>
+			<li><a ui-sref="dashboard.searchClientInformation"><i class="fa fa-table fa-fw"></i>Search Client Information</a></li>	
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
             </li>
