advance member search implementation.

--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,8 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>        
         <script src="js/sb-admin-2.js"></script> 
-        <script src="js/constants.js"></script>	
+        <script src="js/constants.js"></script>
+        <script src="services/commonService.js"></script> 	
     <!-- endbuild -->
     </head>
     <body>
