Created login person name display at header, customized the header-notification.js directive to fetch the logged in user details.

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,8 @@
         <script src="scripts/app.js"></script>        
         <script src="js/sb-admin-2.js"></script> 
         <script src="js/constants.js"></script>
-        <script src="services/commonService.js"></script> 	
+        <script src="services/commonService.js"></script>
+        <script src="services/base64Service.js"></script> 	
     <!-- endbuild -->
     </head>
     <body>
