Latest changes related to add crm user.

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -4,6 +4,9 @@
             <li ui-sref-active="active"> 
             	<a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a> 
             </li>
+            <li ui-sref-active="active" ng-if="sidebarAuth.type=='ADMIN'"> 
+                <a ui-sref="dashboard.addCrmUser"><i class="fa fa-dashboard fa-fw"></i> Add CRM User</a> 
+            </li>
             <li>
             	<a ui-sref="dashboard.transaction"><i class="fa fa-university fa-fw"></i>Transaction</a>
             </li>
