--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -7,6 +7,9 @@
             <li ui-sref-active="active" ng-if="sidebarAuth.type=='ADMIN'"> 
                 <a ui-sref="dashboard.addCrmUser"><i class="fa fa-dashboard fa-fw"></i> Add CRM User</a> 
             </li>
+			<li ui-sref-active="active" > 
+                <a ui-sref="dashboard.addCrmProduct"><i class="fa fa-dashboard fa-fw"></i> Add CRM Products</a> 
+            </li>
             <li>
             	<a ui-sref="dashboard.transaction"><i class="fa fa-university fa-fw"></i>Transaction</a>
             </li>
