2 new screens created recent 100 cancelled transactions, performa search invoice.

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -23,7 +23,13 @@
             	<a ui-sref="dashboard.searchClientInformation"><i class="fa fa-table fa-fw"></i>Search Client Information</a>
             </li>
             <li ui-sref-active="active">
-            	<a ui-sref="dashboard.transactionSearch"><i class="fa fa-university fa-fw"></i>Transaction Search</a>
+                <a ui-sref="dashboard.transactionSearch"><i class="fa fa-university fa-fw"></i>Transaction Search</a>
+            </li>            
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.performaInvoiceSearch"><i class="fa fa-university fa-fw"></i>Performa Invoice Search</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.recentCancelledTransaction"><i class="fa fa-university fa-fw"></i>Recent Cancelled Transaction</a>
             </li>
             <li ui-sref-active="active"> 
             	<a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a> 
