Changed the left navigation icons, and aligned the country, city,state in a single line at advance member search page.

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -5,31 +5,36 @@
             	<a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a> 
             </li>
             <li ui-sref-active="active" ng-if="sidebarAuth.type=='ADMIN'"> 
-                <a ui-sref="dashboard.addCrmUser"><i class="fa fa-dashboard fa-fw"></i> Add CRM User</a> 
+                <a ui-sref="dashboard.addCrmUser"><i class="fa fa-user"></i> Add CRM User</a> 
             </li>
 			<li ui-sref-active="active" > 
-                <a ui-sref="dashboard.addCrmProduct"><i class="fa fa-dashboard fa-fw"></i> Add CRM Products</a> 
+                <a ui-sref="dashboard.addCrmProduct"><i class="fa fa-database"></i> Add CRM Products</a> 
             </li>
             <li>
-            	<a ui-sref="dashboard.transaction"><i class="fa fa-university fa-fw"></i>Transaction</a>
+            	<a ui-sref="dashboard.transaction"><i class="fa fa-credit-card"></i> Transaction(s) </a>
             </li>
             <li>
-            	<a ui-sref="dashboard.abandondCartList"><i class="fa fa-table fa-fw"></i>Abandond Cart List</a>
+            	<a ui-sref="dashboard.abandondCartList"><i class="fa fa-list-alt"></i> Abandond Cart List</a>
             </li>
             <li>
-            	<a ui-sref="dashboard.advancedMemberSearch"><i class="fa fa-table fa-fw"></i>Advance Member Search</a>
+            	<a ui-sref="dashboard.advancedMemberSearch"><i class="fa fa-search"></i> Advance Member Search</a>
             </li>
             <li>
-            	<a ui-sref="dashboard.searchClientInformation"><i class="fa fa-table fa-fw"></i>Search Client Information</a>
+            	<a ui-sref="dashboard.searchClientInformation"><i class="fa fa-search-plus"></i>
+                 Search Client Information</a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.transactionSearch"><i class="fa fa-university fa-fw"></i>Transaction Search</a>
+                <a ui-sref="dashboard.transactionSearch"><i class="fa fa-search-plus"></i> Transaction Search</a>
             </li>            
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.performaInvoiceSearch"><i class="fa fa-university fa-fw"></i>Performa Invoice Search</a>
+                <a ui-sref="dashboard.performaInvoiceSearch"><i class="fa fa-search-plus"></i> Performa Invoice Search</a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.recentCancelledTransaction"><i class="fa fa-university fa-fw"></i>Recent Cancelled Transaction</a>
+                <a ui-sref="dashboard.recentCancelledTransaction"><i class="fa fa-credit-card"></i>
+                 Recent Cancelled Transaction</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.downloadFacility"><i class="fa fa-download"></i> Download Facility</a>
             </li>
             <li ui-sref-active="active"> 
             	<a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a> 
