--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -1,4 +1,4 @@
-<div class="navbar-default sidebar" role="navigation">
+<div class="navbar-default sidebar sidebar-scrolling" role="navigation">
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav in" id="side-menu">
             <li ui-sref-active="active"> 
