--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -36,11 +36,14 @@
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.downloadFacility"><i class="fa fa-download"></i> Download Facility</a>
             </li>
-            <li ui-sref-active="active"> 
-            	<a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a> 
-            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.lowRemaningCreditList"><i class="fa fa-credit-card"></i> Low Remaning Credit List</a>
+            </li> 
             <li ui-sref-active="active">
             	<a ui-sref="dashboard.daily-tasks"><i class="fa fa-university fa-fw"></i>Daily Tasks</a>
+            </li>            
+            <li ui-sref-active="active"> 
+                <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a> 
             </li>
             <li ui-sref-active="active"> 
             	<a ui-sref="dashboard.table"><i class="fa fa-table fa-fw"></i> Tables</a> 
