added some sales and transaction screen

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -25,6 +25,9 @@
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.transactionSearch"><i class="fa fa-search-plus"></i> Transaction Search</a>
+            </li> 
+	   <li ui-sref-active="active">
+                <a ui-sref="dashboard.salesAndTransactions"><i class="fa fa-credit-card"></i> Sales & Transactions</a>
             </li>            
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.performaInvoiceSearch"><i class="fa fa-search-plus"></i> Performa Invoice Search</a>
